--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -187,7 +187,7 @@ p.pre-header {
 @media (min-width: 768px) {
   .btn span .btn-icon,
   .btn a .btn-icon {
-    margin-left: 26px;
+    margin-left: 18px;
   }
 }
 .btn span .btn-arrow,
@@ -994,17 +994,18 @@ nav.navbar-light .navbar-nav .nav-link:hover {
 @media (min-width: 992px) {
   .form-wrapper {
     padding: 80px 20px;
-    max-width: 500px;
+    max-width: 600px;
   }
 }
 .form-wrapper form {
+  margin-top: 30px;
   width: 100%;
 }
 .form-wrapper form input, .form-wrapper form textarea {
   width: 100%;
 }
 .form-wrapper form input {
-  padding: 25px 0;
+  padding: 18px 0 0 0;
 }
 .form-wrapper form input,
 .form-wrapper form textarea {
@@ -1018,8 +1019,13 @@ nav.navbar-light .navbar-nav .nav-link:hover {
   outline-width: 0;
   border-bottom: 1px solid #C81E1E;
 }
-.form-wrapper form .form-layout input:first-of-type {
-  margin-right: 30px;
+.form-wrapper form .form-layout div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.form-wrapper form .form-layout div:nth-child(2n) {
+  margin-left: 20px;
 }
 .form-wrapper form .form-layout textarea {
   margin-top: 30px;
@@ -1032,9 +1038,6 @@ nav.navbar-light .navbar-nav .nav-link:hover {
   .form-wrapper form .form-layout textarea {
     margin-top: 0px;
   }
-}
-.form-wrapper form p label {
-  display: none;
 }
 
 .hero-header {
@@ -1820,8 +1823,33 @@ nav.navbar-light .navbar-nav .nav-link:hover {
   }
 }
 
-.thank-you {
+.thank-you .intro {
   text-align: center;
+}
+.thank-you .flex-wrapper {
+  max-width: 1400px;
+  margin: 4vw auto;
+  display: flex;
+}
+.thank-you .flex-wrapper > div {
+  width: 50%;
+}
+.thank-you .flex-wrapper > div:first-of-type {
+  background-image: url("/uploads/images/placeholder-2.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.thank-you .flex-wrapper > div:last-of-type {
+  background-color: white;
+  padding: 4vw;
+  box-sizing: border-box;
+}
+.thank-you .flex-wrapper h1 {
+  margin-top: 20px;
+}
+.thank-you .flex-wrapper p.intro-text {
+  margin-bottom: 30px;
 }
 
 /*# sourceMappingURL=main.css.map */
