--- a/templates/contact/thanks.twig
+++ b/templates/contact/thanks.twig
@@ -18,8 +18,8 @@
                 <div class="">
                 </div>
                 <div>
-                    <p class="intro-text">Lorem ipsum dolor sit amet consectetur </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi nihil, nulla reiciendis, magnam eaque rem nobis facere deleniti facilis, doloribus dolor vero consectetur recusandae voluptatum natus earum! Nemo, aperiam molestiae.</p>
+                    <p class="intro-text">One of our friendly team will be in touch with you shortly.</p>
+                    <p>If you have an emergency, give us a call on <a href="tel:+6442986260">(04) 2986260</a>. Otherwise, feel free to head back over to our website and check out our range of services. Whether you are remodelling your home, need a new piece of equipment installed, or just need an electrician in a hurry, we’re here to answer the call.</p>
                     <div class="btn dark">
                         {% embed '_partials/buttons' %}
                         {% block url %} / {% endblock %}
