--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -78,7 +78,7 @@
             <p>Our friendly electricians will personally visit your property or site to give advice around best options to suit your needs as well as provide a custom design and quote. We’re also passionate about safety; with over thirty years combined experience in the electrical trade and a strict health and safety policy, you can rest assured that you and your property are in the best of hands.</p>
           </div>
 
-          <div class="bg-img bg-img-one bg-red" style="background-image: url('{{ asset1.getUrl(imgQuality) }}">
+          <div class="bg-img bg-img-one bg-red" style="background-image: url('{{ asset1.getUrl() }}">
 
           </div>
         </div>
