--- a/web/assets/styles/main.scss
+++ b/web/assets/styles/main.scss
@@ -37,7 +37,7 @@ body {
   position: relative;
   height: 100%;
   margin: 0;
-  max-width: 2000px;
+  // max-width: 2000px;
   min-width: 320px;
   overflow-x: hidden; 
   padding-top: 66px;
@@ -309,6 +309,10 @@ p.pre-header{
 .wrapper{ 
   max-width: 1440px;
   margin: 0 auto;
+
+//   @media (min-width:2000px){
+// max-width: 2000px;
+//   }
 }
 
 .container-fluid{
@@ -720,9 +724,18 @@ nav{
     .right .max-800{
       margin-right:8%;
     }
-    
+  }
+
+  @media (min-width:1600px){
+    .right .max-800{
+      margin-left:8%;
+      margin-right: auto;
+    }
   }
 }
+
+
+
 
 //*************style  *********************
 .style-6{
@@ -971,6 +984,10 @@ nav{
         margin-top: 40px;
       }
     }
+
+    @media (min-width:2000px){
+      padding: 60px;
+    }
   }
 
 
@@ -1093,6 +1110,12 @@ nav{
   @media (min-width:992px){
     padding: 80px 20px;
     max-width: 600px;
+  }
+
+  @media (min-width:2000px){
+    max-width: 600px;
+    margin-left: 8%;
+    margin-right: auto;
   }
 
   form{
@@ -1472,6 +1495,8 @@ nav{
         font-size: 36px;
       }
     }
+
+
   }
 
 
@@ -1812,7 +1837,7 @@ nav{
 
 
 .blog{
-  padding-bottom:60px;
+  padding-bottom:8vw;
   background-color: $black800;
   @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
   
